syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractAlertDescriptorProto";

import "sdc/biceps/abstractdescriptor.proto";

message AbstractAlertDescriptorMsg {
  AbstractDescriptorMsg abstract_descriptor = 1;
}
