syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AlertSystemDescriptorProto";

import "sdc/biceps/abstractalertdescriptor.proto";
import "sdc/biceps/alertconditiondescriptoroneof.proto";
import "sdc/biceps/alertsignaldescriptor.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/duration.proto";

message AlertSystemDescriptorMsg {
  AbstractAlertDescriptorMsg abstract_alert_descriptor = 1;
  repeated AlertConditionDescriptorOneOfMsg alert_condition = 2;
  repeated AlertSignalDescriptorMsg alert_signal = 3;
  google.protobuf.UInt32Value a_max_physiological_parallel_alarms = 4;
  google.protobuf.UInt32Value a_max_technical_parallel_alarms = 5;
  google.protobuf.Duration a_self_check_period = 6;
}
